--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-practice",
-  "homepage": "https://kanika-07cs.github.io/react-practice1/",
+  "homepage": "https://kanika-07cs.github.io/task2-react/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
